[package]
name = "unix_socket_error"
version = "0.1.0"
authors = ["Felix Watts <felixwatts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.24", features = ["full"] } # TODO reduce features
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11.1"
async-trait="0.1.40"
serde_derive = "1.0"
